--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "expo": "~38.0.8",
     "expo-speech": "~8.2.1",
     "expo-status-bar": "^1.0.2",
+    "express": "^4.17.1",
     "mongodb": "^3.5.9",
+    "mongoose": "^5.9.24",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
