--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "axios": "^0.19.2",
     "expo": "~38.0.8",
+    "expo-google-app-auth": "^8.1.2",
     "expo-speech": "~8.2.1",
     "expo-status-bar": "^1.0.2",
     "express": "^4.17.1",
@@ -21,6 +22,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-elements": "^2.0.4",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-google-signin": "^2.1.1",
     "react-native-push-notification": "^4.0.0",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
