--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.2",
     "expo": "~38.0.8",
     "expo-google-app-auth": "^8.1.2",
+    "expo-image-picker": "^8.3.0",
     "expo-speech": "~8.2.1",
     "expo-status-bar": "^1.0.2",
     "express": "^4.17.1",
