--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-elements": "^2.0.4",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-google-signin": "^2.1.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-push-notification": "^4.0.0",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
