--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "axios": "^0.19.2",
     "expo": "~38.0.8",
+    "expo-av": "^8.3.0",
     "expo-google-app-auth": "^8.1.2",
     "expo-image-picker": "^8.3.0",
     "expo-speech": "~8.2.1",
