--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/slider": "^3.0.3",
     "axios": "^0.19.2",
     "expo": "~38.0.8",
     "expo-av": "^8.3.0",
