--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-push-notification": "^4.0.0",
     "react-native-reanimated": "~1.9.0",
+    "react-native-responsive-screen": "^1.4.1",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-vector-icons": "^7.0.0",
